Feat/protobuf refactor (#1773)
* Refactor markup

* Refactor detection protobufs

* Move JNI loading to the classes with native methods.